@@ -1,3 +1,8 @@
+2012-11-07  Don Porter  <dgp@users.sourceforge.net>
+
+	* win/tclWinSock.c:	[Bug 3574493] Avoid hanging on exit due to
+	use of synchronization calls in routines called by DllMain().
+
 2012-10-03  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclIO.c:	When checking for std channels being closed,
